--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,16 +3,12 @@ $main: #0c889e;
 $sub: lighten($main, 55%);
 $sub-02: lighten($main, 63%);
 
-$pc: 769px;
-$sp: 768px;
-@mixin pc {
-  @media screen and (min-width: ($pc)) {
-    @content;
+@mixin responsive($breakpoint) {
+  @if $breakpoint == "sp" {
+    @media (max-width: 768px) { @content; } 
   }
-}
-@mixin sp {
-  @media screen and (max-width: ($sp)) {
-    @content;
+  @else if $breakpoint == "pc" {
+    @media (min-width: 769px) { @content; }
   }
 }
 
@@ -20,6 +16,7 @@ $sp: 768px;
   display: grid;
   place-items: center;
 }
+
 /* ------------------------- */
 
 body {
@@ -91,7 +88,7 @@ body {
     margin-block: 0;
     font-size: 24px;
     font-weight: bold;
-    @include sp {
+    @include responsive(sp) {
       font-size: 20px;
     }
   }
@@ -99,7 +96,7 @@ body {
     font-size: 16px;
     margin-block: 0;
     margin-top: 1em;
-    @include sp {
+    @include responsive(sp) {
       font-size: 14px;
     }
   }
