--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -76,7 +76,7 @@ body {
   font-size: 24px;
   font-weight: bold;
 }
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .accordion .title {
     font-size: 20px;
   }
@@ -86,7 +86,7 @@ body {
   margin-block: 0;
   margin-top: 1em;
 }
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .accordion .subtitle {
     font-size: 14px;
   }
